--- a/business-rules/R39354.md
+++ b/business-rules/R39354.md
@@ -15,8 +15,8 @@ erp.entity: Crm.Sales.SalesOrderLines
 | Priority | Late |
 | Modify | YES |
 | Applicable Legislations | ALL // no condition needed |
-| Action | IF SalesOrderLine IS NEW THEN SalesOrderLine.ApplyTradeConditions = TRUE |
-| Description| When a new line is created in 'Sales Order Lines', the rule should always set ApplyTradeConditions = True on the same sales line. |
+| Action | Set SalesOrderLine.ApplyTradeConditions = TRUE |
+| Description| Whenever a new record is added to the Sales Order Lines panel/table, the system must automatically set the Apply Trade Conditions field to checked by default. |
 | Message | |
 | Version | Introduced: |
 | Revocable | YES |
