--- a/business-rules/R33913.md
+++ b/business-rules/R33913.md
@@ -14,7 +14,7 @@ erp.entity: Logistics.Wms.WarehouseOrders
 | Layer | Back-End                                        |
 | Events | Planning |
 | Priority | Normal |
-| Modify | YES |
+| Modify | NO |
 | Applicable Legislations | ALL // no condition needed |
 | Action | Validate for all lines that: <br/> If WarehouseLocation != null, then WarehouseLocation.Warehouse == WarehouseOder.Warehouse |
 | Description | When document state is changed to Planned, the rules validates that the lines does not contain Warehouse Locations from another Warehouse.|
