--- a/business-rules/R39354.md
+++ b/business-rules/R39354.md
@@ -3,12 +3,12 @@ erp.type: front-end-business-rule
 erp.entity: Crm.Sales.SalesOrderLines
 ---
 
-# R39354 Sales Order Lines - True Apply Trade Conditions On Create
+# R39354 Sales Order Lines - Apply Trade Conditions On Create
 | Name | Value |
 | ---- | ----- |
 | Code | R39354 |
 | Entity | @Crm.Sales.SalesOrderLines |
-| Name | TrueApplyTradeConditionsOnCreate |
+| Name | ApplyTradeConditionsOnCreate |
 | Attribute | ApplyTradeConditions |
 | Layer | Front-End |
 | Events | CREATENEW |
