--- a/business-rules/R39390.md
+++ b/business-rules/R39390.md
@@ -3,7 +3,7 @@ erp.type: business-rule
 erp.entity: Finance.Accounting.AccountingVouchers
 ---
 
-# R39390 Accounting voucher - Completed State Cannot Be Revoked
+# R39390 Accounting Voucher - Completed State Cannot Be Revoked
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Code**                    | R39390                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
