--- a/business-rules/R39390.md
+++ b/business-rules/R39390.md
@@ -29,7 +29,7 @@ erp.entity: Finance.Accounting.AccountingVouchers
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Message**                 | Invalid system state change.                                                          |
 |                             | <br></br>                                                                             |
-|                             | The state Completed of the Accounting Vouches cannot be revoked.                      |                 
+|                             | The state Completed of the Accounting Vouchers cannot be revoked.                     |                 
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Version**                 | Introduced: v.26.2                                                                    |
 +-----------------------------+---------------------------------------------------------------------------------------+
