--- a/business-rules/R39390.md
+++ b/business-rules/R39390.md
@@ -25,7 +25,9 @@ erp.entity: Finance.Accounting.AccountingVouchers
 |                             | <br></br>                                                                             |
 |                             | Then (ToState cannot be Released or lower than Released)                              |   
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Description**             | Ensures the integrity of accounting data submitted to SAF-T by preventing further state changes after completion.
+| **Description**             | Ensures the integrity of accounting data submitted to SAF-T by preventing transitions |
+|                             | to the "Released" state or any lower state, in order to restrict further editing      | 
+|                             | once the "Completed" state is reached.                                                |   
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Message**                 | Invalid system state change.                                                          |
 |                             | <br></br>                                                                             |
