--- a/business-rules/R39365.md
+++ b/business-rules/R39365.md
@@ -3,13 +3,13 @@ erp.type: business-rule
 erp.entity: Logistics.Wms.WarehouseReconciliations
 ---
 
-# R39365 WarehouseReconciliations – Warehouse Zone
+# R39365 WarehouseReconciliations – Zone Warehouse
 
 | Name | Value |
 | ---- | ----- |
 | Code | R39365 |
-| Entity | Logistics.Wms.WarehouseReconciliations |
-| Name | Warehouse Zone|
+| Entity | @Logistics.Wms.WarehouseReconciliations |
+| Name | ZoneWarehouse |
 | Attribute | Warehouse, WarehouseZone |
 | Layer | Back-End |
 | Events | Planning + |
@@ -18,7 +18,7 @@ erp.entity: Logistics.Wms.WarehouseReconciliations
 | Applicable Legislations | ALL // no condition needed |
 | Action | Validate that: <br/> If WarehouseZone != null, then WarehouseReconciliations.WarehouseZone == WarehouseReconciliations.Warehouse |
 | Description | When document state is changed to Planned +, the rules validates that the WarehouseReconciliations does not contain Warehouse Zone from another Warehouse.|
-| Message | The Warehouse Zone field in document "{DocumentNo}" contains an invalid value. <br/> Warehouse Zone "{WarehouseReconciliations.WarehouseZone}" is from warehouse "{WarehouseZone.Warehouse}" and the warehouse of the current document is "{WarehouseReconciliations.Warehouse}". <br/> Please make sure that the selected location is from the same Warehouse. |
+| Message | The Warehouse Zone field in document "{DocumentText}" contains an invalid value. <br/> Warehouse Zone "{WarehouseReconciliations.WarehouseZone}" is from warehouse "{WarehouseZone.Warehouse}" and the warehouse of the current document is "{WarehouseReconciliations.Warehouse}". <br/> Please make sure that the selected location is from the same Warehouse. |
 | Introduced In Version | Introduced: - <br>Updated: - |
 | Revocable | NO |
 
