--- a/business-rules/R39366.md
+++ b/business-rules/R39366.md
@@ -3,13 +3,13 @@ erp.type: business-rule
 erp.entity: Logistics.Wms.WarehouseReconciliations
 ---
 
-# R39366 WarehouseReconciliations – Warehouse Location
+# R39366 WarehouseReconciliations – Lines Location Warehouse
 
 | Name | Value |
 | ---- | ----- |
 | Code | R39366 |
 | Entity | Logistics.Wms.WarehouseReconciliations |
-| Name | Warehouse Location |
+| Name | LinesLocationWarehouse |
 | Attribute | Warehouse, Line.WarehouseLocation |
 | Layer | Back-End |
 | Events | Planning + |
@@ -18,7 +18,7 @@ erp.entity: Logistics.Wms.WarehouseReconciliations
 | Applicable Legislations | ALL // no condition needed |
 | Action | Validate for all lines that: <br/> If WarehouseLocation != null, then WarehouseLocation.Warehouse == WarehouseReconciliations.Warehouse |
 | Description | When document state is changed to Planned +, the rules validates that the lines does not contain Warehouse Locations from another Warehouse.|
-| Message | The Warehouse Location field in line number "{LineNo}" in document "{DocumentNo}" contains an invalid value. <br/> Warehouse Location "{Line.WarehouseLocation}" is from warehouse "{Line.WarehouseLocation.Warehouse}" and the warehouse of the current document is "{WarehouseReconciliations.Warehouse}". <br/> Please make sure that the selected locations is from the same warehouse.|
+| Message | The Warehouse Location field in line number "{LineNo}" in document "{DocumentText}" contains an invalid value. <br/> Warehouse Location "{Line.WarehouseLocation}" is from warehouse "{Line.WarehouseLocation.Warehouse}" and the warehouse of the current document is "{WarehouseReconciliations.Warehouse}". <br/> Please make sure that the selected locations is from the same warehouse.|
 | Introduced In Version | Introduced: -  <br>Updated: - |
 | Revocable | NO |
 
