--- a/business-rules/R39369.md
+++ b/business-rules/R39369.md
@@ -3,13 +3,13 @@ erp.type: business-rule
 erp.entity: Logistics.Wms.WarehouseReconciliations
 ---
 
-# R39369 WarehouseReconciliations – Warehouse Worker
+# R39369 WarehouseReconciliations – Lines Worker Warehouse
 
 | Name | Value |
 | ---- | ----- |
 | Code | R39369 |
 | Entity | Logistics.Wms.WarehouseReconciliations |
-| Name | Warehouse Worker  |
+| Name | LinesWorkerWarehouse  |
 | Attribute | Warehouse, Line.WarehouseWorker |
 | Layer | Back-End |
 | Events | Planning + |
@@ -18,7 +18,7 @@ erp.entity: Logistics.Wms.WarehouseReconciliations
 | Applicable Legislations | ALL // no condition needed |
 | Action | Validate for all lines that: <br/> If WarehouseWorker != null, then WarehouseWorker.Warehouse == WarehouseReconciliations.Warehouse |
 | Description | When document state is changed to Planned +, the rules validates that the lines does not contain Warehouse Workers from another Warehouse. |
-| Message | The Warehouse Worker field in line number "{LineNo}" in document "{DocumentNo}" contains an invalid value. <br/> Warehouse worker "{Line.WarehouseWorker}" is from warehouse "{Line.WarehouseWorker.Warehouse}" and the warehouse of the current document is "{WarehouseReconciliations.Warehouse}". <br/> Please make sure that the selected worker is from the same warehouse. |
+| Message | The Warehouse Worker field in line number "{LineNo}" in document "{DocumentText}" contains an invalid value. <br/> Warehouse worker "{Line.WarehouseWorker}" is from warehouse "{Line.WarehouseWorker.Warehouse}" and the warehouse of the current document is "{WarehouseReconciliations.Warehouse}". <br/> Please make sure that the selected worker is from the same warehouse. |
 | Introduced In Version | Introduced: - <br>Updated: - |
 | Revocable | NO |
 
