--- a/business-rules/R39403.md
+++ b/business-rules/R39403.md
@@ -7,7 +7,7 @@ erp.entity: Crm.Presales.Leads
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Code**                    | R39403                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Entity**                  | Crm.Presales.Leads Entity                                                             |
+| **Entity**                  | @Crm.Presales.Leads                                                                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Name**                    | CheckEnterpriseCompanyLocation                                                        |
 +-----------------------------+---------------------------------------------------------------------------------------+
