--- a/business-rules/R39403.md
+++ b/business-rules/R39403.md
@@ -7,7 +7,7 @@ erp.entity: Crm.Presales.Leads
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Code**                    | R39403                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Entity**                  | Crm.Presales.Leads Entity                                                             |
+| **Entity**                  | @Crm.Presales.Leads Entity                                                            |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Name**                    | CheckEnterpriseCompanyLocation                                                        |
 +-----------------------------+---------------------------------------------------------------------------------------+
@@ -26,7 +26,6 @@ erp.entity: Crm.Presales.Leads
 |                             | If (EnterpriseCompany != null AND EnterpriseCompanyLocation !=null)                   |                                           
 |                             | <br></br>                                                                             |
 |                             | EnterpriseCompanyLocation.Company == EntepriseCompany.Company                         |
-|                             | <br></br>                                                                             |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Description**             | The current validation checks that if there is a selected company location, it is a   |
 |                             | location of the enterprise company of the lead. Leads with enterprise company location| 
@@ -39,7 +38,6 @@ erp.entity: Crm.Presales.Leads
 |                             | <br></br>                                                                             |
 |                             | Select an Enterprise Company Location that belongs to the specified Enterprise        |                       
 |                             | Company and try again.                                                                |                      
-|                             | <br></br>                                                                             |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Version**                 | Introduced: v.                                                                        |
 +-----------------------------+---------------------------------------------------------------------------------------+
