--- a/business-rules/R39403.md
+++ b/business-rules/R39403.md
@@ -7,7 +7,7 @@ erp.entity: Crm.Presales.Leads
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Code**                    | R39403                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Entity**                  | @Crm.Presales.Leads Entity                                                            |
+| **Entity**                  | @Crm.Presales.Leads                                                                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Name**                    | CheckEnterpriseCompanyLocation                                                        |
 +-----------------------------+---------------------------------------------------------------------------------------+
@@ -28,8 +28,8 @@ erp.entity: Crm.Presales.Leads
 |                             | EnterpriseCompanyLocation.Company == EntepriseCompany.Company                         |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Description**             | The current validation checks that if there is a selected company location, it is a   |
-|                             | location of the enterprise company of the lead. Leads with enterprise company location| 
-|                             | which are not part of the enterprise company of the specified lead would be           |
+|                             | location of the enterprise company of the lead. Leads with enterprise company         | 
+|                             | locations that are not part of the enterprise company of the specified lead would be  |
 |                             | inconsistency.                                                                        |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Message**                 | The selected Enterprise Company Location '{EnterpriseCompanyLocation.DisplayText}' is |                         
