--- a/business-rules/R39411.md
+++ b/business-rules/R39411.md
@@ -30,9 +30,8 @@ erp.entity: Projects.Agile.Cases
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Message**                 | Invalid system state change.                                                          |
 |                             | <br></br>                                                                             |
-|                             | Changing the system statе to 'CLOSED' is only allowed if the current statе is 'RESOLVED'.
-|                             | <br></br>                                                                             |
-|                             | Please change the case statе to 'RESOLVED' first and try again.                       |                        
+|                             | You cannot close this Case because there are still open Tasks linked to it. <br></br> |
+|                             | Please complete all related Tasks before closing the Case.                            |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Version**                 | Introduced:                                                                           |
 +-----------------------------+---------------------------------------------------------------------------------------+
