--- a/business-rules/R39411.md
+++ b/business-rules/R39411.md
@@ -3,7 +3,7 @@ erp.type: business-rule
 erp.entity: Projects.Agile.Cases
 ---
 
-# R37555 Case - Closed Only If Resolved
+# R39411 Case - Closed Only If Task Completed
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Code**                    | R39411                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
