--- a/business-rules/R39365.md
+++ b/business-rules/R39365.md
@@ -18,7 +18,7 @@ erp.entity: Logistics.Wms.WarehouseReconciliations
 | Applicable Legislations | ALL // no condition needed |
 | Action | Validate that: <br/> If WarehouseZone != null, then WarehouseReconciliations.WarehouseZone == WarehouseReconciliations.Warehouse |
 | Description | When document state is changed to Planned +, the rules validates that the WarehouseReconciliations does not contain Warehouse Zone from another Warehouse.|
-| Message | The Warehouse Zone field in document "{DocumentText}" contains an invalid value. <br/> Warehouse Zone "{WarehouseReconciliations.WarehouseZone}" is from warehouse "{WarehouseZone.Warehouse}" and the warehouse of the current document is "{WarehouseReconciliations.Warehouse}". <br/> Please make sure that the selected location is from the same Warehouse. |
+| Message | The Warehouse Zone field in document "{DocumentText}" contains an invalid value. <br/> Warehouse Zone "{WarehouseReconciliations.WarehouseZone}" is from warehouse "{WarehouseZone.Warehouse}" and the warehouse of the current document is "{WarehouseReconciliations.Warehouse}". <br/> Please make sure that the selected Zone is from the same Warehouse. |
 | Introduced In Version | Introduced: - <br>Updated: - |
 | Revocable | NO |
 
