--- a/business-rules/R39411.md
+++ b/business-rules/R39411.md
@@ -3,13 +3,13 @@ erp.type: business-rule
 erp.entity: Projects.Agile.Cases
 ---
 
-# R39411 Case - Closed Only If Task Completed
+# R39411 Case - Closed Only If Tasks Completed
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Code**                    | R39411                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Entity**                  | @Projects.Agile.Cases                                                                 |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Name**                    | ClosedOnlyIfTaskCompleted                                                             |
+| **Name**                    | ClosedOnlyIfTasksCompleted                                                             |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Attribute**               | SystemState                                                                           |
 +-----------------------------+---------------------------------------------------------------------------------------+
@@ -24,9 +24,9 @@ erp.entity: Projects.Agile.Cases
 | **Action**                  | If System State is changed to 'CLOSED'                                                |
 |                             | <br></br>                                                                             |
 |                             | Validate that:<br>                                                                    |   
-|                             | Extensible Data object of entity type Task is Completed.                              |
+|                             | All Tasks connected to that Case are Completed.                                       |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Description**             | The rule ensures that only cases whose Tasks are completed, can be closed.            |    
+| **Description**             | The rule ensures that only cases whose Tasks are completed can be closed.             |    
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Message**                 | Invalid system state change.                                                          |
 |                             | <br></br>                                                                             |
@@ -35,7 +35,7 @@ erp.entity: Projects.Agile.Cases
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Version**                 | Introduced:                                                                           |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Revocable**               | NO                                                                                    |
+| **Revocable**               | YES                                                                                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
 
 *\* For more information about the Business Rules Documentation Template and a short explanation of each column, see
