--- a/business-rules/R39354.md
+++ b/business-rules/R39354.md
@@ -11,8 +11,8 @@ erp.entity: Crm.Sales.SalesOrderLines
 | Name | SetApplyTradeConditionsOnCreate |
 | Attribute | ApplyTradeConditions |
 | Layer | Front-End |
-| Events | CREATENEW |
-| Priority | Late |
+| Events | AttributeChanged (SalesOrder) |
+| Priority | Normal |
 | Modify | YES |
 | Applicable Legislations | ALL // no condition needed |
 | Action | Set SalesOrderLine.ApplyTradeConditions = TRUE |
