--- a/business-rules/R39354.md
+++ b/business-rules/R39354.md
@@ -18,5 +18,5 @@ erp.entity: Crm.Sales.SalesOrderLines
 | Action | Set SalesOrderLine.ApplyTradeConditions = TRUE |
 | Description| Whenever a new record is added to the Sales Order Lines panel/table, the system must automatically set the Apply Trade Conditions field to checked by default. |
 | Message | |
-| Version | Introduced: |
+| Version | Introduced: 26 SP5|
 | Revocable | YES |
