--- a/business-rules/R39403.md
+++ b/business-rules/R39403.md
@@ -39,7 +39,7 @@ erp.entity: Crm.Presales.Leads
 |                             | Select an Enterprise Company Location that belongs to the specified Enterprise        |                       
 |                             | Company and try again.                                                                |                      
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Version**                 | Introduced: v.                                                                        |
+| **Version**                 | Introduced: v 26.2                                                                    |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Revocable**               | NO                                                                                    |
 +-----------------------------+---------------------------------------------------------------------------------------+
