Revise message for document state change notification
Updated notification message for document state changes.

--- a/business-rules/R35927.md
+++ b/business-rules/R35927.md
@@ -27,7 +27,7 @@ erp.entity: General.Documents.Documents
 | **Description**             | The rule ensures that the user assigned as responsible for the document will be       |     
 |                             | promptly notified of the document state change.                                       |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Message**                 | \-                                                                                    |                         
+| **Message**                 |'{DisplayText}' state has been changed to '{State}'. You are notified, because this document is assigned to you.                                                                           |                                                                                       |                         
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Version**                 | Introduced: v.24                                                                      |
 +-----------------------------+---------------------------------------------------------------------------------------+
