--- a/business-rules/R30135.md
+++ b/business-rules/R30135.md
@@ -8,16 +8,10 @@ erp.entity: Systems.Security.TrustedApplications
 | **Code**             | R30135                                                                                        |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Entity**           | @Systems.Security.TrustedApplications                                                         |
-|                      | <br/><br/>                                                                                    |
-|                      | <br/><br/>                                                                                    |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Name**             | SetCreationTime                                                                               |
-|                      | <br/><br/>                                                                                    |
-|                      | <br/><br/>                                                                                    |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Attribute**        | CreationTimeUtc                                                                               |
-|                      | <br/><br/>                                                                                    |
-|                      | <br/><br/>                                                                                    |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Layer**            | Back-End                                                                                      |
 +----------------------+-----------------------------------------------------------------------------------------------+
@@ -32,13 +26,11 @@ erp.entity: Systems.Security.TrustedApplications
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Action**           | If (CreationTimeUtc == Null) CreationTimeUtc = DateTime.Now() (UTC)                           |
 +----------------------+-----------------------------------------------------------------------------------------------+
-| **Description**      | On commit if CreationTimeUtc is empty than set current time in UTC in this field.             |
+| **Description**      | On commit, if CreationTimeUtc is empty then set current time in UTC in this field.             |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Message**          | \-                                                                                            |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Version**          | Introduced: 2019.1                                                                            |
-|                      | <br/><br/>                                                                                    |
-|                      | Updated: -                                                                                    |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Revocable**        | NO                                                                                            |
 +----------------------+-----------------------------------------------------------------------------------------------+
