--- a/business-rules/R39411.md
+++ b/business-rules/R39411.md
@@ -33,7 +33,7 @@ erp.entity: Projects.Agile.Cases
 |                             | You cannot close this Case because there are still open Tasks linked to it. <br></br> |
 |                             | Please complete all related Tasks before closing the Case.                            |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Version**                 | Introduced:                                                                           |
+| **Version**                 | Introduced: v.26.2                                                                    |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Revocable**               | YES                                                                                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
