--- a/business-rules/R38780.md
+++ b/business-rules/R38780.md
@@ -23,7 +23,7 @@ erp.entity: Projects.Agile.Cases
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Modify**                  | YES                                                                                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Action**                  | The rule creates a new record in Social.Follows, where the current user is registered as a follower of the newly created Case. 
+| **Action**                  | The rule creates a new record in Social.Follows of level TAG, where the current user is registered as a follower of the newly created Case. 
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Description**             | The rule ensures that the user who created the Case is automatically set              |     
 |                             | as a follower, allowing them to receive notifications for all future updates related to that Case.
