--- a/business-rules/R39339.md
+++ b/business-rules/R39339.md
@@ -36,7 +36,7 @@ erp.entity: Crm.Sales.CustomerExternalAccess
 |                             | Please set a Serviced by Enterprise Company Location in the definition of             | 
 |                             | “{Customer.DisplayText}” before creating an External Access record.                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
-| **Version**                 | Introduced: v.                                                                        |
+| **Version**                 | Introduced: v. 26 SP8                                                                 |
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Revocable**               | Yes                                                                                   |
 +-----------------------------+---------------------------------------------------------------------------------------+
