--- a/business-rules/R39543.md
+++ b/business-rules/R39543.md
@@ -25,7 +25,7 @@ erp.entity: Projects.Agile.CaseDevelopments
 |                             | - Collect all non-null Case header references (e.g., Project, Project Area, Project Milestone, Sprint, Case Category, etc.)<br>    
 |                             | - Build a list of referenced objects<br>                                              |
 |                             | - Retrieve users from FollowedEntities who follow any of these objects with FollowLevel = Favorite.<br>
-|                             | - Remove duplicate users and exclude CaseDevelopment.CreationUser<br><\br>            |
+|                             | - Remove duplicate users and exclude CaseDevelopment.CreationUser<br></br>            |
 |                             | If any users are found, the rule creates a notification for each of them through the @notifications system. 
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Description**             | The rule notifies users who follow at Favorite level at least one entity referenced   |     
