Update title in R39538.md to reflect correct entity name

--- a/business-rules/R39538.md
+++ b/business-rules/R39538.md
@@ -3,7 +3,7 @@ erp.type: business-rule
 erp.entity: Communities.Social.Comments
 ---
 
-# R39538 Case - Reply Must Reference Same Data Object
+# R39538 SocialComment - Reply Must Reference Same Data Object
 +-----------------------------+---------------------------------------------------------------------------------------+
 | **Code**                    | R39538                                                                                |
 +-----------------------------+---------------------------------------------------------------------------------------+
