--- a/business-rules/R39566.md
+++ b/business-rules/R39566.md
@@ -24,12 +24,12 @@ erp.entity: Logistics.Wms.WarehouseReconciliationLines
 | **Applicable         | [ALL // no condition needed                                                                   |
 | Legislations**       | ](xref:applicable-legislations)                                                               |
 +----------------------+-----------------------------------------------------------------------------------------------+
-| **Action**           | If WarehouseLocation != NULL                                                                  |
-|                      | AND WarehouseZone != NULL                                                                     |
-|                      | validate, that:                                                                               |
-|                      | WarehouseZone == WarehouseLocation.WarehouseZone                                              |
+| **Action**           | When both Warehouse Location and Warehouse Zone are filled in the line, check that the        |
+|                      | selected Warehouse Zone is the same as the location’s zone, or is a parent zone of it         |
+|                      | (directly or through one or more parents)                                                     |
 +----------------------+-----------------------------------------------------------------------------------------------+
-| **Description**      | The rule validates that the lines does not contain Locations from another Zone                | 
+| **Description**      | The rule validates that the lines does not contain Locations from another Zone,               | 
+|                      | i.e. the selected Warehouse Zone must match the Location’s Zone or a parent Zone of it.       |
 +----------------------+-----------------------------------------------------------------------------------------------+
 | **Message**          | The Warehouse Location in line {LineNo} is from a different Warehouse Zone. Please check the  |
 |                      | Warehouse Zone and try again.                                                                 |
