--- a/business-rules/R39576.md
+++ b/business-rules/R39576.md
@@ -7,7 +7,7 @@ erp.entity: Logistics.Wms.WarehouseReconciliations
 
 | Name | Value |
 | ---- | ----- |
-| Code | R39365 |
+| Code | R39576 |
 | Entity | @Logistics.Wms.WarehouseReconciliations |
 | Name | WarehouseZoneIsAlwaysNull |
 | Attribute | WarehouseZone |
@@ -18,7 +18,7 @@ erp.entity: Logistics.Wms.WarehouseReconciliations
 | Applicable Legislations | ALL // no condition needed |
 | Action | Validate that: <br/> WarehouseZone == Null |
 | Description | The rule validates that the Warehouse Zone field is always empty. For reconciliation purposes, Warehouse Zones are selected in the Warehouse Reconciliation Lines. |
-| Message | Warehouse Zone in the document header is obsolete and must remain empty.<br/>For reconciliation purposes, Warehouse Zones are selected in the Warehouse Reconciliation Lines.<br/>Please select Warehouse Zone in the lines and try again. |
+| Message | Warehouse Zone in the document header is no longer used and must remain empty. <br> For reconciliation purposes, Warehouse Zones must be specified in the Warehouse Reconciliation Lines. <br> Please select the Warehouse Zone in the lines and try again. |
 | Introduced In Version | Introduced: - <br>Updated: - |
 | Revocable | NO |
 
