--- a/business-rules/R39576.md
+++ b/business-rules/R39576.md
@@ -1,14 +1,11 @@
----
-erp.type: business-rule
-erp.entity: Logistics.Wms.WarehouseReconciliations
----
+Not implemented
 
 # R39576 WarehouseReconciliations – Warehouse Zone Is Always Null
 
 | Name | Value |
 | ---- | ----- |
 | Code | R39576 |
-| Entity | @Logistics.Wms.WarehouseReconciliations |
+| Entity | |
 | Name | WarehouseZoneIsAlwaysNull |
 | Attribute | WarehouseZone |
 | Layer | Back-End |
