--- a/business-rules/R39564.md
+++ b/business-rules/R39564.md
@@ -19,7 +19,7 @@ erp.entity: Logistics.Wms.WarehouseReconciliations
 | Action | Validate for all lines that: <br/> If WarehouseZone != null, then WarehouseZone.Warehouse == WarehouseReconciliations.Warehouse |
 | Description | When document state is changed to Planned +, the rule validates that the lines does not contain Warehouse Zone from another Warehouse.|
 | Message | The Warehouse Zone field in line number "{LineNo}" in document "{DocumentText}" contains an invalid value. <br/> Warehouse Zone "{Line.WarehouseZone}" is from warehouse "{Line.WarehouseZone.Warehouse}" and the warehouse of the current document is "{WarehouseReconciliations.Warehouse}". <br/> Please make sure that the selected zone is from the same warehouse.|
-| Introduced In Version | Introduced: -  <br>Updated: - |
+| Introduced In Version | Introduced: 26.2  <br>Updated: - |
 | Revocable | NO |
 
 *\* For more information about the Business Rules Documentation Template and a short explanation of each column, see
